# MicroappStarter

./: .gitignore  README.md  pyproject.toml
scripts/: run_all_tests_and_coverage.py
services/order_service/: .coveragerc  Dockerfile  README.md  pyproject.toml
services/order_service/app/: main.py
services/order_service/app/api/: routes.py
services/order_service/app/models/: order.py
services/order_service/app/store/: memory.py
services/order_service/tests/: docker-compose.test.yml  test_orders.py  test_orders_integration.py
services/product_service/: Dockerfile  pyproject.toml
services/product_service/app/: main.py
services/product_service/app/api/: routes.py
services/product_service/app/models/: product.py
services/product_service/app/store/: memory.py
services/product_service/tests/: test_products.py  test_products_integration.py
services/user_service/: Dockerfile  README.md  pyproject.toml
services/user_service/app/: main.py
services/user_service/app/api/: routes.py
services/user_service/app/models/: user.py
services/user_service/app/store/: memory.py
services/user_service/tests/: test_users.py  test_users_integration.py
