[tool.poetry]
name = "microapp-starter"
version = "0.1.0"
description = "A multi-service microservice project"
authors = ["Jan Stefl <janstefl.cz@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
test-all = "scripts.run_all_tests_and_coverage:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"