[tool.poetry]
name = "order_service"
version = "0.1.0"
description = "Order service for microapp"
authors = ["Jan Stefl <janstefl.cz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
python-on-whales = "^0.76.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"