[tool.poetry]
name = "user_service"
version = "0.1.0"
description = "User service for microapp"
authors = ["Jan Stefl <janstefl.cz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "tests/*",
    "__init__.py",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:"
]

[tool.coverage.paths]
source = ["app", "*/app"]